<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionKeyboard"
        android:icon="@drawable/ic_keyboard"
        android:title="@string/terminal_menu_keyboard"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionTmuxNewWindow"
        android:title="@string/terminal_menu_tmux_new_window"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionTmuxNextWindow"
        android:title="@string/terminal_menu_tmux_next_window"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionTmuxPrevWindow"
        android:title="@string/terminal_menu_tmux_prev_window"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionTmuxWindowList"
        android:title="@string/terminal_menu_tmux_window_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionTmuxRenameWindow"
        android:title="@string/terminal_menu_tmux_rename_window"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionReconnect"
        android:title="@string/terminal_menu_reconnect"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionDisconnect"
        android:title="@string/terminal_menu_disconnect"
        app:showAsAction="never" />
</menu>
